[package]
name = "rustoleum"
version = "0.2.0"
edition = "2018"

[lib]
name = "rustoleum"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
argparse = "0.2.2"
[dev-dependencies]
pretty_assertions = "0.7.2"
float-cmp = "0.9.0"
